--- a/responsive.css
+++ b/responsive.css
@@ -7,6 +7,12 @@
 }
 /* HOME */
 .home .sub-title {
+    font-size: 30px;
+}
+
+/* All Titles */
+section header .title,
+#contact-title {
     font-size: 40px;
 }
 
@@ -17,7 +23,7 @@
     margin: auto;
 }
 .about-main {
-    grid-template-areas: "about-image about-brand" "about-skills about-skills";
+    grid-template-areas: "about-image about-brand" "skills-title skills-title" "about-skills about-skills";
     grid-gap: 15px;
 }
 .about-header {
@@ -32,6 +38,10 @@
     justify-content: center;
     align-items: center;
 }
+.skills-title {
+    grid-area: skills-title;
+    font-size: 25px;
+}
 .about-skills {
     grid-area: about-skills;
 }
@@ -45,9 +55,9 @@
 }
 
 
-/* ALL PROJECTS */
+/* PROJECTS */
 .projects-main {    
-    padding-bottom: 20px;
+    padding: 0 0 30px 0;
 }
 
 .project-card {
@@ -55,9 +65,6 @@
 }
 
 /* CONTACT */
-.contact-header {
-    padding-top: 100px;
-}
 .contact input,
 textarea {
     width: 50%;
@@ -86,29 +93,30 @@ p {
 }
 /* ABOUT */
 #profile-pic {
-    width: 15vw;
+    width: 20vw;
 }
 
 .brand-statement {
     font-size: 25px;
 }
 
+.skills-title h4 {
+    font-size: 30px;
+}
+
 .skill-name {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 
-/* ALL PROJECTS */
+/* PROJECTS */
 
 
 /* Contact Form */
 .contact-header {
-    padding-top: 150px;
+    padding-top: 50px;
 }
 
-#contact-title {
-    font-size: 40px;
-}
 .contact input,
 textarea,
 p {
