--- a/responsive.css
+++ b/responsive.css
@@ -37,6 +37,13 @@
     justify-content: center;
     align-items: center;
   }
+
+  .resume,
+  .resume:hover {
+    font-size: 20px;
+    margin: 30px;
+    padding: 10px 60px;
+  }
   .skills-title {
     grid-area: skills-title;
     font-size: 25px;
@@ -63,7 +70,7 @@
   }
 
   .project-card {
-    margin: 10px;
+    margin: 30px;
   }
 
   /* CONTACT */
